Moved query link up

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Lynn Ballout - UX/UI Design</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600,300' rel='stylesheet' type='text/css'>
-	<meta name="description" content="Lynn Ballout UX/UI Designer work portfolio" />
+	<meta name="description" content="Lynn Ballout UX/UI Designer portfolio" />
 	<meta name="keywords"  content="UX,UI,UX/UI,User Experience,Design,Designer" />
 	<meta name="Resource-type" content="Document" />
 
@@ -22,9 +22,9 @@
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-
-	<script type="text/javascript" src="js/jquery.fullPage.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript" src="js/jquery.fullPage.js"></script>
+	
 
 </head>
 <body>
